--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         gradle_build = '7.2.1'
         kotlin = "1.7.0"
         coroutines = '1.6.4'
+        google_services = '4.3.13'
 
         // Android
         core_ktx = '1.9.0'
@@ -26,6 +27,10 @@ buildscript {
         timber = "5.0.1"
         eventbus = "3.3.1"
 
+        // Firebase
+        firebase = '30.4.1'
+        firebase_crashlytics_gradle = "2.9.1"
+
         // Testing
         junit = "4.13.2"
         truth = "1.1.3"
@@ -43,6 +48,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav"
+        classpath "com.google.gms:google-services:$google_services"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase_crashlytics_gradle"
     }
 
     repositories {
