--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,17 +32,17 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+            signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "BASE_URL", "\"https://www.be.dapass.kr\""
         }
         release {
             minifyEnabled true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "BASE_URL", "\"https://www.be.dapass.kr\""
-
-            signingConfig signingConfigs.release
         }
     }
 
