--- a/app/signingConfigs.gradle
+++ b/app/signingConfigs.gradle
@@ -1,8 +1,14 @@
 signingConfigs {
-  release {
-    storeFile file('release.keystore')
-    storePassword '123123'
-    keyAlias 'base-app'
-    keyPassword '123123'
-  }
+    debug {
+        storeFile file('keys/debug.jks')
+        storePassword 'demodemo'
+        keyAlias 'debug'
+        keyPassword 'demodemo'
+    }
+    release {
+        storeFile file('keys/release.jks')
+        storePassword 'demodemo'
+        keyAlias 'release'
+        keyPassword 'demodemo'
+    }
 }
