--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
-        gradle_build = '7.2.1'
-        kotlin = "1.7.0"
+        gradle_build = '7.3.0'
+        kotlin = "1.7.10"
         coroutines = '1.6.4'
         google_services = '4.3.13'
 
         // Android
         core_ktx = '1.9.0'
+        camerax = '1.2.0-beta02'
         appcompat = '1.5.1'
         material = '1.6.1'
         constraintlayout = '2.1.4'
@@ -23,9 +24,14 @@ buildscript {
         gson = '2.9.1'
         okhttp3 = "4.10.0"
         retrofit = "2.9.0"
-        glide = '4.13.2'
+        glide = '4.14.2'
         timber = "5.0.1"
         eventbus = "3.3.1"
+        photo_view = "2.3.0"
+
+        // MLKit
+        ml_camera = "16.0.0-beta3"
+        ml_face_detection = "16.1.5"
 
         // Firebase
         firebase = '30.4.1'
@@ -37,7 +43,7 @@ buildscript {
         truth_ext = "1.4.0"
         android_core_testing = "1.1.1"
         androidx_core_testing = "2.1.0"
-        mockk = '1.12.7'
+        mockk = '1.13.1'
         androidx_test = "1.4.0"
         androidx_test_ext_junit = "1.1.3"
         espresso = "3.4.0"
