[JetpackCompose] Define common and navigation compose app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ducpv">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BaseApp"
         android:usesCleartextTraffic="true">
+
+        <profileable
+            android:shell="true"
+            tools:targetApi="q" />
+
         <activity
             android:name="com.ducpv.MainActivity"
             android:exported="true">
@@ -22,9 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.ducpv.module.facedetect.FaceDetectActivity"
             android:exported="true" />
+
     </application>
 
 </manifest>
