--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,19 +35,24 @@ android {
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
-            buildConfigField "String", "BASE_URL", "\"https://www.be.dapass.kr\""
+            buildConfigField "String", "API_URL", "\"https://commerce.bidu.com.vn/\""
         }
         release {
             minifyEnabled true
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
-            buildConfigField "String", "BASE_URL", "\"https://www.be.dapass.kr\""
+            buildConfigField "String", "API_URL", "\"https://commerce.bidu.com.vn/\""
         }
     }
 
     buildFeatures {
+        compose = true
         dataBinding = true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
     }
 
     compileOptions {
@@ -84,6 +89,28 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle"
     implementation "androidx.savedstate:savedstate-ktx:$savedstate_ktx"
 
+    // Compose
+    implementation platform("androidx.compose:compose-bom:2022.10.00")
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.runtime:runtime"
+    implementation "androidx.compose.runtime:runtime-livedata"
+
+    implementation "androidx.activity:activity-compose:$activity"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle"
+
+    implementation "androidx.navigation:navigation-compose:$navigation"
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation"
+
+    implementation "io.coil-kt:coil-compose:$compose_coil"
+
+    implementation "com.google.accompanist:accompanist-pager:$compose_accompanist"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$compose_accompanist"
+
     // CameraX
     implementation "androidx.camera:camera-core:$camerax"
     implementation "androidx.camera:camera-camera2:$camerax"
@@ -92,9 +119,9 @@ dependencies {
     implementation "androidx.camera:camera-view:$camerax"
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav"
-    implementation "androidx.navigation:navigation-runtime-ktx:$nav"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+    implementation "androidx.navigation:navigation-runtime-ktx:$navigation"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
@@ -110,8 +137,8 @@ dependencies {
 
     // Firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase")
-    implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation "com.google.firebase:firebase-crashlytics"
+    implementation "com.google.firebase:firebase-analytics"
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$datastore_preferences"
@@ -124,8 +151,8 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide"
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:$dagger_hilt"
-    kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt"
+    implementation "com.google.dagger:hilt-android:$hilt_android"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_android"
 
     // Eventbus
     implementation "org.greenrobot:eventbus:$eventbus"
